--- a/AspStudio/appsettings.json
+++ b/AspStudio/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=dbsoldoza; User Id=postgres; Password=admin;"
+    "DefaultConnection": "Server=dbsoldoza.postgres.database.azure.com;Database=postgres;Port=5432;User Id=adminsoldoza@dbsoldoza;Password=...Soldoza2021;Ssl Mode=Require;"
   },
   "Logging": {
     "LogLevel": {
