--- a/AspStudio/AspStudio.csproj
+++ b/AspStudio/AspStudio.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
+    <PackageReference Include="SweetAlert.Base" Version="1.1.3" />
   </ItemGroup>
 
   <ItemGroup>
